lots of fun stuff

--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
   <meta name="description" content="Daily word puzzle">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/1cbe88ec8f.js" crossorigin="anonymous"></script>
   <script src="app.js" async defer></script>
 </head>
 <body>
   <div class="content-container">
     <h1>Scrmbl</h1>
     <div class="game-container">
+      <div id="score-container"></div>
       <div class="display-container">
         <div id="word-container"></div>
         <div id="input-container"></div>
+        <div id="scrmbl-button">
+          <i class="fa-solid fa-arrows-rotate"></i>
+        </div>
       </div>
       <div id="keyboard-container"></div>
     </div>
