--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div id="info-container"></div>
   <div class="content-container">
     <h1>Scrmbl</h1>
     <div class="game-container">
