--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
     <div id="gameover-view" class="info-view">
       <h2>You got it!</h2>
+      <h3>Here's how you did:</h3>
+      <ul>
+        <li id="scrmbl-display">You used _ Scrmbls,</li>
+        <li id="guess-display">_ guesses,</li>
+        <li id="second-display">and _ seconds</li>
+      </ul>
     </div>
   </div>
 </body>
