--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/1cbe88ec8f.js" crossorigin="anonymous"></script>
-  <script src="game.js" async defer></script>
-  <script src="content.js" async defer></script>
-  <script src="events.js" async defer></script>
+  <script src="js/game.js" async defer></script>
+  <script src="js/content.js" async defer></script>
+  <script src="js/events.js" async defer></script>
 </head>
 
 <body>
