UI redesign for mobile

--- a/index.html
+++ b/index.html
@@ -16,20 +16,26 @@
 
 <body>
   <div class="content-container">
-    <h1>Scrmbl</h1>
-    <hr>
-    <hr>
-    <div class="game-container">
+    <header>
+      <div class="logo-container">
+        <img src="img/scrmbl.svg">
+        <h1>Scrmbl</h1>
+      </div>
+    </header>
+
+    <main>
       <div id="score-container"></div>
       <div id="word-container"></div>
       <div id="input-container"></div>
       <div id="scrmbl-button">
         <i class="fa-solid fa-arrows-rotate"></i>
       </div>
-      <div id="keyboard-container"></div>
-    </div>
+    </main>
+
+    <div id="keyboard-container"></div>
   </div>
-  <div id="info-container" class="content-container">
+
+  <div id="info-container">
     <div id="start-view" class="info-view">
       <h2>Welcome to Scrambl... your new daily word game.</h2>
       <h3>Before you click start, here's how you play:</h3>
