--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <meta name="description" content="Daily word puzzle">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="img/site.webmanifest">
+  <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="img/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
   <script src="https://kit.fontawesome.com/1cbe88ec8f.js" crossorigin="anonymous"></script>
   <script src="js/game.js" async defer></script>
   <script src="js/content.js" async defer></script>
@@ -16,20 +25,26 @@
 
 <body>
   <div class="content-container">
-    <h1>Scrmbl</h1>
-    <hr>
-    <hr>
-    <div class="game-container">
+    <header>
+      <div class="logo-container">
+        <img src="img/scrmbl.svg">
+        <h1>Scrmbl</h1>
+      </div>
+    </header>
+
+    <main>
       <div id="score-container"></div>
       <div id="word-container"></div>
       <div id="input-container"></div>
       <div id="scrmbl-button">
         <i class="fa-solid fa-arrows-rotate"></i>
       </div>
-      <div id="keyboard-container"></div>
-    </div>
+    </main>
+
+    <div id="keyboard-container"></div>
   </div>
-  <div id="info-container" class="content-container">
+
+  <div id="info-container">
     <div id="start-view" class="info-view">
       <h2>Welcome to Scrambl... your new daily word game.</h2>
       <h3>Before you click start, here's how you play:</h3>
