--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="js/game.js" async defer></script>
   <script src="js/content.js" async defer></script>
   <script src="js/events.js" async defer></script>
+  <script src="js/saveLocal.js" async defer></script>
 </head>
 
 <body>
