buy me a coffee link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
       <h3>Here's how you did:</h3>
       <p id="final-results-display"></p>
       <button id="share-button">Share</button>
+      <a href="https://www.buymeacoffee.com/scrmbl" target="_blank">
+        <div id="coffee">
+          <div><i class="fa-solid fa-mug-hot"></i></div>
+          <p>Buy the devs a coffee</a></p>
+        </div>
+      </a>
     </div>
   </div>
 </body>
