--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <img src="img/scrmbl.svg">
         <h1>Scrmbl</h1>
       </div>
+      <div id="stats-button">
+        <i class="fa-solid fa-chart-simple"></i>
+      </div>
     </header>
 
     <main>
@@ -66,6 +69,9 @@
       <h3>Here's how you did:</h3>
       <p id="final-results-display"></p>
       <button id="share-button">Share</button>
+      <div id="footer">
+        <p>Copyright © 2023 Tirrell Group</p>
+      </div>
     </div>
   </div>
 </body>
