fix styling of coffee button and fix start text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li>The goal is to un-Scrmbl the word as fast as you can.</li>
         <li>When you press start, a timer starts counting.</li>
         <li>There's a Scrmbl button that will mix up the word again if you are lost</li>
-        <li>But be careful. Each time you click the Scrmbl button, or submit an answer, these will go in your results
+        <li>But be careful. Each time you click the Scrmbl button it will count against your results
           along with the time that it took you to complete it.</li>
         <li>Thanks for playing.</li>
       </ul>
@@ -71,7 +71,7 @@
       <button id="share-button">Share</button>
       <a href="https://www.buymeacoffee.com/scrmbl" target="_blank">
         <div id="coffee">
-          <div><i class="fa-solid fa-mug-hot"></i></div>
+          <i class="fa-solid fa-mug-hot"></i>
           <p>Buy the devs a coffee</a></p>
         </div>
       </a>
